Update dependencies and enhance content representation
- Added new font dependencies: '@fontsource/inter' and '@fontsource/roboto' for improved typography.
- Updated 'tailwindcss' version from 4.1.7 to 4.1.11 for better performance and features.
- Introduced new SVG asset 'focus.svg' to replace the previous 'question.svg' in the 'Beyond the Buzz' blog post for enhanced visual representation.
- Revised author bio for Aurel to include location details, improving personal branding on the about page.

--- a/src/content/blog/beyond-the-buzz/index.mdx
+++ b/src/content/blog/beyond-the-buzz/index.mdx
@@ -3,11 +3,11 @@ title: 'Beyond the Buzz'
 description: "An Investor's Guide to Spotting AI-Washing"
 date: 2025-08-11
 tags: ['investing','ai']
-image: '@/assets/storyset/question.svg'
+image: '@/assets/storyset/focus.svg'
 authors: ['aurel']
 ---
 
-## Executive Summary 
+## Executive Summary
 
 The proliferation of artificial intelligence, particularly since the public
 launch of generative AI platforms like ChatGPT in late 2022, has triggered an
