--- a/src/content/blog/code-to-capital/index.mdx
+++ b/src/content/blog/code-to-capital/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'From Code to Capital'
-description: 'The Playbook for AI Market Movers'
+description: 'Following the Playbook of AI Market Movers'
 date: 2025-08-12
 tags: ['investing', 'ai']
 image: '@/assets/storyset/deconstruct.svg'
@@ -27,7 +27,9 @@ playbook for value creation. This report deconstructs that playbook by analyzing
 the foundational code that enabled the current wave, deconstructing the
 strategies of the era's most successful AI companies, and applying these
 learnings to identify the frontiers where the next generation of unicorns is
-likely to emerge. The analysis will first establish the technical bedrock of the
+likely to emerge.
+
+The analysis will first establish the technical bedrock of the
 modern AI industry, then pivot to deep-dive case studies of OpenAI, Databricks,
 and Scale AI to reveal their operational flywheels. Finally, it will apply these
 patterns to hunt for alpha in emerging sectors, concluding with the strategic
@@ -447,17 +449,17 @@ and more valuable position than being a one-time data vendor.
 
 **Table 2: AI Unicorn Funding Trajectories**
 
-| Company        | Key Funding Round | Year     | Amount     | Post-Money Valuation | Lead/Key Investors                                |
-| -------------- | ----------------- | -------- | ---------- | -------------------- | ------------------------------------------------- |
-| **OpenAI**     | Series D          | 2019     | $1B        | N/A                  | Microsoft 21                                      |
-|                | Series E          | 2023     | $10B       | $27B                 | Microsoft 21                                      |
-|                | **Series F**      | **2025** | **$40B**   | **$300B**            | SoftBank Group, Dragoneer Investment Group 21     |
-| **Databricks** | Series D          | 2017     | $140M      | $900M                | Andreessen Horowitz, New Enterprise Associates 38 |
-|                | Series F          | 2019     | $400M      | $6.2B                | Andreessen Horowitz, Microsoft, Tiger Global 38   |
-|                | **Series J**      | **2024** | **$10B**   | **$62B**             | Nvidia, Capital One, a16z 13                      |
-| **Scale AI**   | Series E          | 2021     | $325M      | $7B                  | Dragoneer, Tiger Global, Greenoaks 14             |
-|                | Series F          | 2024     | $1B        | $13.8B               | Accel, Y Combinator, Nvidia, Amazon, Meta 41      |
-|                | **Series G**      | **2025** | **$14.3B** | **$29B**             | Meta 14                                           |
+| Company        | Key Funding Round | Year     | Amount     | Post-Money Valuation | Lead/Key Investors                             |
+| -------------- | ----------------- | -------- | ---------- | -------------------- | ---------------------------------------------- |
+| **OpenAI**     | Series D          | 2019     | $1B        | N/A                  | Microsoft                                      |
+|                | Series E          | 2023     | $10B       | $27B                 | Microsoft                                      |
+|                | **Series F**      | **2025** | **$40B**   | **$300B**            | SoftBank Group, Dragoneer Investment Group     |
+| **Databricks** | Series D          | 2017     | $140M      | $900M                | Andreessen Horowitz, New Enterprise Associates |
+|                | Series F          | 2019     | $400M      | $6.2B                | Andreessen Horowitz, Microsoft, Tiger Global   |
+|                | **Series J**      | **2024** | **$10B**   | **$62B**             | Nvidia, Capital One, a16z 13                   |
+| **Scale AI**   | Series E          | 2021     | $325M      | $7B                  | Dragoneer, Tiger Global, Greenoaks             |
+|                | Series F          | 2024     | $1B        | $13.8B               | Accel, Y Combinator, Nvidia, Amazon, Meta      |
+|                | **Series G**      | **2025** | **$14.3B** | **$29B**             | Meta                                           |
 
 ## 3. The Hunt for Alpha - Where the Next Unicorns Will Emerge
 
@@ -508,24 +510,24 @@ is defined by five core principles:
 ### 3.2 AI in Drug Discovery & Generative Biology
 
 **The Problem:** The process of discovering and developing new medicines is
-*notoriously slow, astonishingly expensive, and fraught with risk. The failure
-*rate for drug candidates entering clinical trials is approximately 90%, and the
-*journey from lab to market can take over a decade. The underlying biological
-*data—from genomics to proteomics—is of a scale and complexity that pushes the
-\*limits of human analysis.
+notoriously slow, astonishingly expensive, and fraught with risk. The failure
+rate for drug candidates entering clinical trials is approximately 90%, and the
+journey from lab to market can take over a decade. The underlying biological
+data—from genomics to proteomics—is of a scale and complexity that pushes the
+limits of human analysis.
 
 **The AI Solution (Platform Shift):** This frontier is being redefined by the
-*application of generative AI to the fundamental building blocks of life. This
-*represents a true platform shift, moving from analyzing existing biological
-*data to generating novel biological designs. Using architectures like
-*Transformers and diffusion models, startups are now able to design novel
-*proteins, predict the 3D structure of molecules, and simulate their
-*interactions with disease targets in silico. A key operational paradigm
-*emerging is the "lab-in-the-loop," where AI models generate predictions for new
-*drug candidates, which are then rapidly synthesized and tested in automated
-*labs. The results of these experiments are then fed back into the models,
-*creating a virtuous cycle of continuous improvement that dramatically
-\*accelerates the discovery process.
+application of generative AI to the fundamental building blocks of life. This
+represents a true platform shift, moving from analyzing existing biological
+data to generating novel biological designs. Using architectures like
+Transformers and diffusion models, startups are now able to design novel
+proteins, predict the 3D structure of molecules, and simulate their
+interactions with disease targets in silico. A key operational paradigm
+emerging is the "lab-in-the-loop," where AI models generate predictions for new
+drug candidates, which are then rapidly synthesized and tested in automated
+labs. The results of these experiments are then fed back into the models,
+creating a virtuous cycle of continuous improvement that dramatically
+accelerates the discovery process.
 
 **Applying the Framework:**
 
@@ -550,22 +552,22 @@ is defined by five core principles:
 ### 3.3 AI in Physical Automation & Robotics
 
 **The Problem:** Advanced economies face persistent labor shortages in key
-*sectors like manufacturing, logistics, and agriculture. Furthermore, many
-*physical tasks are dangerous, repetitive, and ergonomically challenging for
-*humans. Traditional industrial robots have been successful in highly structured
-*environments like automotive assembly lines but lack the adaptability to handle
-*the variability of unstructured settings like a cluttered warehouse or a
-*dynamic construction site.
+sectors like manufacturing, logistics, and agriculture. Furthermore, many
+physical tasks are dangerous, repetitive, and ergonomically challenging for
+humans. Traditional industrial robots have been successful in highly structured
+environments like automotive assembly lines but lack the adaptability to handle
+the variability of unstructured settings like a cluttered warehouse or a
+dynamic construction site.
 
 **The AI Solution (Platform Shift):** The next platform shift in robotics is the
-_fusion of advanced AI with anthropomorphic hardware. This involves creating
-_"cognitive robots"—machines that can perceive, reason about, and interact with
-*the physical world in a human-like way. By combining cutting-edge computer
-*vision, reinforcement learning, and LLM-driven reasoning with a humanoid form
-*factor—which is inherently adapted to a world built for humans—these startups
-*are aiming to create general-purpose robots that can learn and perform a wide
-*range of tasks, from palletizing boxes in a warehouse to eventually assisting
-*with chores in the home.
+fusion of advanced AI with anthropomorphic hardware. This involves creating
+"cognitive robots"—machines that can perceive, reason about, and interact with
+the physical world in a human-like way. By combining cutting-edge computer
+vision, reinforcement learning, and LLM-driven reasoning with a humanoid form
+factor—which is inherently adapted to a world built for humans—these startups
+are aiming to create general-purpose robots that can learn and perform a wide
+range of tasks, from palletizing boxes in a warehouse to eventually assisting
+with chores in the home.
 
 **Applying the Framework:**
 
@@ -587,7 +589,7 @@ _"cognitive robots"—machines that can perceive, reason about, and interact wit
   corporate venture arms of industrial giants (e.g., Amazon's Industrial
   Innovation Fund, which has invested in companies like Standard Bots).
 
-- **Notable Startups to Watch:** Figure AI 57, Standard Bots 56, NEURA
+- **Notable Startups to Watch:** Figure AI, Standard Bots, NEURA
   Robotics.
 
 ### 3.4 AI in Climate Tech & Energy Management
@@ -631,7 +633,7 @@ geospatial AI to model and mitigate environmental risks.
   funds, alongside strategic investments from major energy corporations,
   industrial conglomerates, and governments.
 
-- **Notable Startups to Watch:** CarbonCapture 62, Astraea 62, VIA 61, OCELL.
+- **Notable Startups to Watch:** CarbonCapture, Astraea, VIA, OCELL.
 
 ### 3.5 AI in Personalized Education
 
@@ -676,17 +678,17 @@ managing a classroom of 30 students.
   capitalists and, potentially, strategic partnerships with large educational
   publishers or technology companies.
 
-- **Notable Startups to Watch:** IONI 65, SchoolAI 63, Merlyn 64, Carnegie
+- **Notable Startups to Watch:** IONI, SchoolAI, Merlyn, Carnegie
   Learning.
 
 **Table 3: The Next AI Frontiers**
 
 | Emerging Sector                         | Core Problem to Solve                                      | Key AI Application                             | Notable Startups to Watch                                           |
 | --------------------------------------- | ---------------------------------------------------------- | ---------------------------------------------- | ------------------------------------------------------------------- |
-| **Drug Discovery & Generative Biology** | High cost, time, and failure rate of R&D                   | Generative Biology, Lab-in-the-Loop Simulation | (Emerging field, often within large pharma like Roche/Genentech 54) |
-| **Physical Automation & Robotics**      | Labor shortages, dangerous and non-repetitive tasks        | Cognitive Humanoid Robots                      | Figure AI 57, Standard Bots 56, NEURA Robotics 58                   |
-| **Climate Tech & Energy Management**    | Industrial decarbonization, grid instability, climate risk | Predictive Optimization for Physical Systems   | CarbonCapture 62, Astraea 62, OCELL 59, VIA 61                      |
-| **Personalized Education**              | Inefficient "one-size-fits-all" learning, teacher burnout  | Adaptive Learning Tutors & Assistants          | IONI 65, SchoolAI 63, Merlyn 64, Dreambox Learning 65               |
+| **Drug Discovery & Generative Biology** | High cost, time, and failure rate of R&D                   | Generative Biology, Lab-in-the-Loop Simulation | (Emerging field, often within large pharma like Roche/Genentech) |
+| **Physical Automation & Robotics**      | Labor shortages, dangerous and non-repetitive tasks        | Cognitive Humanoid Robots                      | Figure AI, Standard Bots, NEURA Robotics                   |
+| **Climate Tech & Energy Management**    | Industrial decarbonization, grid instability, climate risk | Predictive Optimization for Physical Systems   | CarbonCapture, Astraea, OCELL, VIA                      |
+| **Personalized Education**              | Inefficient "one-size-fits-all" learning, teacher burnout  | Adaptive Learning Tutors & Assistants          | IONI, SchoolAI, Merlyn, Dreambox Learning                |
 
 ## Conclusion
 
