Add new SVG assets for enhanced visual representation in blog content
- Introduced two new SVG files: 'chat-bot.svg' and 'online-world.svg' to enrich the asset library.
- Updated the 'Pure Play AI Landscape' blog post to reference the new 'online-world.svg' asset, improving thematic representation and visual engagement.

--- a/src/content/blog/pure-play-ai/index.mdx
+++ b/src/content/blog/pure-play-ai/index.mdx
@@ -3,11 +3,11 @@ title: 'Pure Play AI Landscape'
 description: 'An Analysis of Market Leaders, Emerging Contenders, and Sentiment'
 date: 2025-08-10
 tags: ['investing','ai']
-image: '@/assets/storyset/play.svg'
+image: '@/assets/storyset/online-world.svg'
 authors: ['aurel']
 ---
 
-## Executive Summary 
+## Executive Summary
 
 The artificial intelligence sector has transitioned from a nascent technological
 frontier to a primary driver of market activity and investment strategy. While
@@ -405,7 +405,7 @@ regulation and complex, proprietary data.
 
 ### 3.1 AI in Health and Biotechnology
 
-Tempus AI (NASDAQ: TEM)
+#### Tempus AI (NASDAQ: TEM)
 
 Tempus AI is a health technology company that utilizes AI to analyze vast
 libraries of clinical and molecular data, with a primary goal of personalizing
@@ -419,7 +419,7 @@ positive, with a "Buy" consensus from 11 analysts and an average price target
 between \$65. and \$67.70. Social media sentiment is also bullish, with a Reddit
 score of 77 out of 100, though the volume of mentions is relatively low.
 
-Recursion Pharmaceuticals (NASDAQ: RXRX)
+#### Recursion Pharmaceuticals (NASDAQ: RXRX)
 
 Recursion Pharmaceuticals is a clinical-stage biotechnology company that employs
 machine learning and automation in its drug discovery platform. The company's
@@ -437,7 +437,7 @@ breakouts.
 
 ### 3.2 AI in FinTech
 
-Upstart Holdings (NASDAQ: UPST)
+#### Upstart Holdings (NASDAQ: UPST)
 
 Upstart operates an AI-powered lending platform that leverages alternative data
 sources to provide more accurate credit risk assessments, aiming to improve
@@ -451,7 +451,7 @@ deep divisions about the company's prospects. The average price target is around
 \$65-\$67. The stock has a very high short interest, with 19.34% of its float sold
 short, making it a frequent battleground stock on social media.
 
-Riskified (NYSE: RSKD)
+#### Riskified (NYSE: RSKD)
 
 Riskified provides an e-commerce fraud prevention platform that uses machine
 learning to help merchants reduce fraud while maximizing transaction approvals.
